# simple-rules-js

./: .bazelignore  .gitignore  .swcrc  BUILD.bazel  README.md  WORKSPACE.bazel  pnpm-lock.yaml  tsconfig.json
